<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_mull"
    android:layout_height="match_parent"
    tools:context=".Fragments.TipoColetaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/background_mull"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:padding="8dp"
            android:text="@string/tipo_de_coleta"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnTipoColetaReciclar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginHorizontal="55dp"
                android:layout_marginVertical="55dp"
                android:contentDescription="@string/lixo_reciclado"
                android:src="@drawable/ic_recycle_bincolored" />

            <ImageView
                android:id="@+id/btnTipoColetaDoar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginVertical="55dp"
                android:contentDescription="@string/doacao_roupas"
                android:src="@drawable/ic_sweatercolored" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:text="@string/lixo_recicl_vel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:text="@string/doa_o_de_roupas"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>