<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mull"
    tools:context=".Fragments.CalendarioFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_mull"
    android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo_coletas"
            android:padding="40dp"
            android:shadowColor="#323232"
            android:src="@drawable/ic_logo_final_mull___acento"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/date_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/datacoleta"
            android:textColorHint="#FFFFFF"
            android:inputType="date"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/horainicio"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_timer_black_24dp"
            android:inputType="datetime"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            android:hint="@string/hora_inicio"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/horafinal"
            android:textAlignment="center"
            android:inputType="datetime"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_timer_black_24dp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hora_final"
            android:textColorHint="#FFFFFF"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/btnAdicionarDataColeta"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/continuar" />



</LinearLayout>





</FrameLayout>