<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserDadosCadastrais"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@drawable/background_mull"
    tools:context=".Fragments.UserAlterarDadosCadastraisFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@android:dimen/notification_large_icon_height"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutAlterarDadosCadastrais"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutlogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="4dp">

                <ImageView
                    android:id="@+id/logoMull"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_logo_final_mull___acento" />

                <ImageView
                    android:id="@+id/logoLogin"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/ic_logomulle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textDadosCadastrais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dados_cadastrais"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_login"
                android:hint="@string/emailUser"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtinputSenha"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtinputComplemento"
                android:layout_centerInParent="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_senha"
                    android:ems="10"
                    android:hint="@string/passUser"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtinputRepSenha"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtinputSenha"
                android:layout_centerInParent="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edrepSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_senha"
                    android:ems="10"
                    android:maxLines="1"
                    android:hint="@string/repassUser"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAlterar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/botaoAlterar" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/btnAlterar" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>